# react-native-llm-mediapipe

./: .eslintrc.js  .gitignore  .prettierrc.js  CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-llm-mediapipe.podspec  tsconfig.json  tsconfig.shared.json
.github/workflows/: ci.yml
android/: build.gradle  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/llmmediapipe/: LlmInferenceModel.kt  LlmInferenceModule.kt  LlmInferencePackage.kt  LlmMediapipeModule.kt  LlmMediapipePackage.kt
example/: .gitignore  app.json  package.json
example/android/: gradle.properties  settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/ios/: File.swift  Podfile
example/ios/LlmMediapipeExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/LlmMediapipeExample.xcodeproj/: project.pbxproj
example/ios/LlmMediapipeExample.xcodeproj/xcshareddata/xcschemes/: LlmMediapipeExample.xcscheme
example/ios/LlmMediapipeExample.xcworkspace/: contents.xcworkspacedata
example/ios/LlmMediapipeExampleTests/: LlmMediapipeExampleTests.m
example/ios/RunScripts/: copy_model.sh
example/src/: App.tsx  styles.ts  types.ts
ios/: LlmInferenceModel.swift  LlmInferenceModule.m  LlmInferenceModule.swift  LlmMediapipe.mm  LlmMediapipe.swift
models/: .env.example  README.md  build.py  pyproject.toml  pyrightconfig.json  requirements.txt
src/: index.ts  index.tsx  llmInference.ts
(+3 files in other folders)
